--- a/build.gradle
+++ b/build.gradle
@@ -1,63 +1,39 @@
-apply plugin: 'net.corda.plugins.cordapp'
-apply plugin: 'net.corda.plugins.quasar-utils'
-
-cordapp {
-    targetPlatformVersion corda_platform_version
-    minimumPlatformVersion corda_platform_version
-    workflow {
-        name "Template Flows"
-        vendor "Corda Open Source"
-        licence "Apache License, Version 2.0"
-        versionId 1
-    }
-}
-
-sourceSets {
-    main {
-        resources {
-            srcDir rootProject.file("config/dev")
+buildscript {
+    repositories {
+        mavenLocal()
+        maven {
+            credentials {
+                username = System.getenv("ARTIFACTORY_USR")
+                password = System.getenv("ARTIFACTORY_PSW")
+            }
+            def uri = uri((System.getenv("ARTIFACTORY_URL") ?: "https://tixartifactory.jfrog.io/tixartifactory").replace("\\/\$", "") + "/")
+            url uri.resolve("gradle-dev")
         }
     }
-    test {
-        resources {
-            srcDir rootProject.file("config/test")
+
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.71"
+        classpath "net.corda.plugins:cordapp:5.0.6"
+        classpath "net.corda.plugins:cordformation:5.0.6"
+        classpath "net.corda.plugins:quasar-utils:5.0.6"
+    }
+    ext {
+        corda_release_version = "4.4"
+        corda_core_release_distribution = 'net.corda'
+        netty_version = '4.1.49.Final'
+    }
+}
+
+allprojects {
+    repositories {
+        mavenLocal()
+        maven {
+            credentials {
+                username = System.getenv("ARTIFACTORY_USR")
+                password = System.getenv("ARTIFACTORY_PSW")
+            }
+            def uri = uri((System.getenv("ARTIFACTORY_URL") ?: "https://tixartifactory.jfrog.io/tixartifactory").replace("\\/\$", "") + "/")
+            url uri.resolve("gradle-dev")
         }
     }
-    integrationTest {
-        kotlin {
-            compileClasspath += main.output + test.output
-            runtimeClasspath += main.output + test.output
-            srcDir file('src/integrationTest/kotlin')
-        }
-    }
-}
-
-configurations {
-    integrationTestCompile.extendsFrom testCompile
-    integrationTestRuntime.extendsFrom testRuntime
-}
-
-dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
-
-    // Corda dependencies.
-    cordaCompile "$corda_release_group:corda-core:$corda_release_version"
-    cordaRuntime "$corda_release_group:corda:$corda_release_version"
-
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.1'
-
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    // CorDapp dependencies.
-    cordapp project(":contracts")
-}
-
-test {
-    useJUnitPlatform()
-}
-
-task integrationTest(type: Test, dependsOn: []) {
-    testClassesDirs = sourceSets.integrationTest.output.classesDirs
-    classpath = sourceSets.integrationTest.runtimeClasspath
 }
