--- a/contracts/build.gradle
+++ b/contracts/build.gradle
@@ -1,8 +1,11 @@
-apply plugin: 'net.corda.plugins.cordapp'
+plugins {
+    id "net.corda.plugins.cordapp"
+    id "kotlin"
+}
 
 cordapp {
-    targetPlatformVersion corda_platform_version
-    minimumPlatformVersion corda_platform_version
+    targetPlatformVersion 6
+    minimumPlatformVersion 6
     contract {
         name "Template CorDapp"
         vendor "Corda Open Source"
@@ -12,10 +15,19 @@ cordapp {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.2.71"
 
     // Corda dependencies.
-    cordaCompile "$corda_release_group:corda-core:$corda_release_version"
+    cordaCompile "net.corda:corda-core:$corda_release_version"
 
-    testCompile "$corda_release_group:corda-node-driver:$corda_release_version"
+    testCompile "net.corda:corda-node-driver:$corda_release_version"
+}
+
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
+    kotlinOptions {
+        languageVersion = "1.2"
+        apiVersion = "1.2"
+        jvmTarget = "1.8"
+        javaParameters = true
+    }
 }
